--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -1,7 +1,6 @@
-FROM nginxinc/nginx-unprivileged:1-alpine
+FROM nginx:1.23.0-alpine
 
 COPY ./nginx/* /etc/nginx/
-COPY ./openssl.conf.tpl /etc/openssl.conf.tpl
 COPY ./run.sh /run.sh
 
 ENV APP_HOST=app
@@ -10,19 +9,9 @@ ENV APP_PORT=9000
 USER root
 
 RUN apk add --no-cache openssl bash
-RUN mkdir -p /vol/www && \
-    chown nginx:nginx /vol/www && \
-    touch /etc/nginx/default-ssl.conf && \
-    chown nginx:nginx /etc/nginx/default-ssl.conf && \
-    touch /etc/nginx/default.conf && \
-    chown nginx:nginx /etc/nginx/default.conf && \
-    touch /etc/openssl.conf && \
-    chown nginx:nginx /etc/openssl.conf && \
-    chmod +x /run.sh
+RUN chmod +x /run.sh
 
 VOLUME /vol/static
 VOLUME /vol/www
-
-USER nginx
 
 CMD ["/run.sh"]
